--- a/app/src/main/res/layout/list_item_view.xml
+++ b/app/src/main/res/layout/list_item_view.xml
@@ -1,33 +1,35 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
+    android:background="@drawable/border"
     android:layout_height="200dp">
 
-    <RelativeLayout
-        android:orientation="vertical"
-        android:layout_width="100dp"
-        android:layout_height="match_parent"
-
-        android:padding="@dimen/activity_horizontal_margin">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/circle_my"
-            android:id="@+id/image_back"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true" />
-
+    <FrameLayout
+        android:id="@+id/imagemaskframe"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:padding="10dp" >
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/ic_launcher"
+            android:id="@+id/iv_mask_op"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_gravity="center"
+            android:adjustViewBounds="true"
+            android:scaleType="fitXY"
+            android:src="@drawable/circle_my" />
+
+        <ImageView
             android:id="@+id/image"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true" />
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:src="@mipmap/ic_launcher"
+            android:scaleType="fitXY" />
 
-    </RelativeLayout>
+
+    </FrameLayout>
 
     <LinearLayout
         android:orientation="vertical"
