--- a/app/src/main/res/drawable/border.xml
+++ b/app/src/main/res/drawable/border.xml
@@ -2,16 +2,17 @@
     android:padding="10dp"
     android:shape="rectangle" >
 
-    <solid android:color="#00000000" />
+    <solid android:color="#FFFFFF" />
 
     <stroke
         android:width="1dp"
-        android:color="#808080" />
+        android:color="#DDDDDD" />
 
     <corners
         android:bottomLeftRadius="5dp"
         android:bottomRightRadius="5dp"
         android:topLeftRadius="5dp"
         android:topRightRadius="5dp" />
+
 
 </shape>
